--- a/elibras/.env.local
+++ b/elibras/.env.local
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_PROJECT_ID=auth-dev-39ac7
 REACT_APP_FIREBASE_STORAGE_BUCKET=auth-dev-39ac7.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=46758545711
 REACT_APP_FIREBASE_APP_ID=1:46758545711:web:a300ef5385e2fcdc7c39da
+PORT=3000
