ajustes na dash finalizado

--- a/elibras/package.json
+++ b/elibras/package.json
@@ -25,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "webpack serve",
+    "build2": "webpack --mode production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +43,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    
+    "html-loader": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0"
+    
   }
 }
